deploy/deployApplication-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: oos-share
  name: oos-share
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-oos-share
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-oos-share
    spec:
      containers:
      - image: 683573524234.dkr.ecr.us-east-1.amazonaws.com/oos-share:main 
        imagePullPolicy: Always
        name: app-oos-share
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: oos-share
  name: service-oos-share
spec:
  ports:
    - name: http
      protocol: TCP
      port: 443
      targetPort: 80
  type: NodePort
  selector:
    app.kubernetes.io/name: app-oos-share    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-oos-share
  namespace: oos-share
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - oos-share.dhdtech.io
  rules:
  - host: oos-share.dhdtech.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-oos-share
            port:
              number: 443
